tests/feature_tests/snapshots/e2e__feature_tests__use_engines_range__Bash.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
echo '{"engines": {"node": "^6 < 6.17.1"}}' > package.json
fnm install
fnm use
if [ "$(node -v)" != "v6.17.0" ]; then
    echo 'Expected Node version to be "v6.17.0", Got: '"$(node -v)"
    exit 1
fi
