tests/feature_tests/snapshots/e2e__feature_tests__use_engines_range__PowerShell.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
echo '{"engines": {"node": "^6 < 6.17.1"}}' > 'package.json'
fnm install
fnm use
If ("$(node -v)" -ne "v6.17.0") {
    Write-Output ('Expected Node version to be "v6.17.0", Got: ' + $(node -v))
    exit 1
}
